--- a/src/scss/template.scss
+++ b/src/scss/template.scss
@@ -26,7 +26,7 @@ body {
         flex-flow: row nowrap;
         .side-bar {
             padding: 1rem;
-            width: 10%;
+            width: 5%;
             &.blue {
                 background-color: rgb(0, 82, 204);
             }
@@ -85,8 +85,64 @@ body {
             .el-main-nav {
                 padding: 0 10px;
                 font-weight: bold;
+                margin: 0 4px;
+                max-width: 100%;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                align-self: baseline;
             }
         }
+        .down-arrow {
+            transform: rotate(-90deg);
+        }
+        .down-arrow:after {
+            content: '\203A';
+            margin-left: 5px;
+            // transform: rotate(45deg);
+        }
+        .createBtn {
+            -webkit-box-align: baseline;
+    align-items: baseline;
+    border-width: 0px;
+    box-sizing: border-box;
+    display: inline-flex;
+    font-size: inherit;
+    font-style: normal;
+    font-weight: 500;
+    max-width: 100%;
+    text-align: center;
+    text-decoration: none;
+    white-space: nowrap;
+    background: rgb(0, 82, 204);
+    border-radius: 3px;
+    box-shadow: transparent 0px 0px 0px 2px;
+    color: rgb(255, 255, 255);
+    cursor: default;
+    height: 2.28571em;
+    line-height: 2.28571em;
+    padding: 0px 8px;
+    transition: background 0.1s ease-out 0s, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38) 0s;
+    vertical-align: middle;
+    width: auto;
+        }
+
+    }
+    .modal-wrapper {
+        margin: auto;
+        max-width: 400px;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        
+    }
+    .modal {
+        padding: 1.5rem;
+        margin: 0 auto;
+        height: 50vh;
+        width: 50%;
+        background-color: bisque;
+        border-radius: 3px;
 
     }
 
