--- a/src/mobile.jade
+++ b/src/mobile.jade
@@ -2,3 +2,5 @@ include ./includes/styles.html
 include ./includes/styles-mobile.html
 
 include ./content/main.html 
+
+include ./includes/scripts.html
