--- a/src/scss/template.scss
+++ b/src/scss/template.scss
@@ -136,7 +136,7 @@ body {
         justify-content: center;
         
     }
-    .modal {
+    .initial-modal {
         padding: 1.5rem;
         margin: 0 auto;
         height: 50vh;
