--- a/src/includes/scripts.html
+++ b/src/includes/scripts.html
@@ -1,1 +1,2 @@
-<script src="js/scripts.js" defer></script>
+<!-- <script src="js/scripts.js" defer></script> -->
+<script src="js/modal.js" defer></script>
