--- a/src/scss/template.scss
+++ b/src/scss/template.scss
@@ -143,7 +143,7 @@ body {
         width: 50%;
         background-color: bisque;
         border-radius: 3px;
-
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     }
 
 }
