--- a/src/scss/template.scss
+++ b/src/scss/template.scss
@@ -73,8 +73,35 @@ body {
             }
         }
     }
+    header {
+        align-items: center;
+        box-sizing: border-box;
+        display: flex;
+        flex-shrink: 0;
+        justify-content: space-between;
+        padding-left: 12px;
+        padding-right: 12px;
+        height: 56px;
+        position: relative;
+        background-color: #FFFFFF;
+        color: #6B778C;
+    }
+    header:after {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 100%;
+        height: 4px;
+        background: linear-gradient(180deg,rgba(9,30,66,0.13) 0,rgba(9,30,66,0.13) 1px,rgba(9,30,66,0.08) 1px,rgba(9,30,66,0) 4px);
+    }
     nav {
-        padding: 15px;
+        align-items: center;
+        display: flex;
+        flex-grow: 1;
+        min-width: 0;
+        height: inherit;
+        // padding: 15px;
         background-color: white;
         color: black;
         font-size: 14px;
@@ -180,7 +207,7 @@ body {
         width: 100%;
         display: inline-block;
         text-align: left;
-        max-width: 700px;
+        max-width: 865px;
         min-height: auto;
         margin-bottom: 16px;
         background: whitesmoke;
@@ -212,20 +239,27 @@ body {
     }
 
     .modal-header {
-        background: #fff;
-        text-align: center;
-        padding: 16px;
-        border-radius: 2px 2px 0 0;
-        border-bottom: solid 1px gray;
+        background-color: #fff;
+        border: none;
+        padding: 16px 32px;
+        width: 800px;
+        margin-left: auto;
+        margin-right: auto;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
     }
 
     .modal-title {
-        font-family: 'Viktory', sans-serif;
-        font-size: 16px;
-        font-weight: 600;
-        padding: 0 40px;
-        line-height: 13px;
-        color: lightcoral;
+        font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,'Fira Sans','Droid Sans','Helvetica Neue',sans-serif;;
+        color: #172b4d;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 1.5;
+        margin: 0;
+        overflow: hidden;
+        padding: 0;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     .modal-close {
@@ -254,18 +288,40 @@ body {
     }
 
     .modal-body {
-        padding: 24px;
+        // padding: 24px;
+        background-color: #fff;
+        border: none;
+        padding: 16px 32px;
+        width: 800px;
+        margin-left: auto;
+        margin-right: auto
     }
 
     .modal-footer {
-        padding: 24px 0;
-        margin: 0 24px;
-        border-top: 2px solid darkgray;
+        background-color: #fff;
+        border: none;
+        padding: 16px 32px;
+        width: 800px;
+        margin-left: auto;
+        margin-right: auto
     }
 
     .modal-bottom-close {
         left: -1000%;
         position: absolute;
+    }
+
+    input[type-text] {
+        height: 32px;
+        font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,'Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
+        color: #172b4d;
+        font-size: 14px;
+        font-weight: 400;
+        font-style: normal;
+        line-height: 20px;
+        background-color: #f4f5f7;
+        border: 1px solid #dfe1e6;
+        padding: 4px 7px 5px;
     }
 }
 
