--- a/src/includes/scripts.html
+++ b/src/includes/scripts.html
@@ -1,3 +1,3 @@
 <!-- <script src="js/scripts.js" defer></script> -->
 <script src="js/modal.js" defer></script>
-<!-- <script src="js/projectList.js" defer></script> -->
+<script src="js/projectList.js" defer></script>
