--- a/src/scss/template.scss
+++ b/src/scss/template.scss
@@ -130,28 +130,28 @@ body {
         }
         .createBtn button {
             -webkit-box-align: baseline;
-    align-items: baseline;
-    border-width: 0px;
-    box-sizing: border-box;
-    display: inline-flex;
-    font-size: inherit;
-    font-style: normal;
-    font-weight: 500;
-    max-width: 100%;
-    text-align: center;
-    text-decoration: none;
-    white-space: nowrap;
-    background: rgb(0, 82, 204);
-    border-radius: 3px;
-    box-shadow: transparent 0px 0px 0px 2px;
-    color: rgb(255, 255, 255);
-    cursor: default;
-    height: 2.28571em;
-    line-height: 2.28571em;
-    padding: 0px 8px;
-    transition: background 0.1s ease-out 0s, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38) 0s;
-    vertical-align: middle;
-    width: auto;
+            align-items: baseline;
+            border-width: 0px;
+            box-sizing: border-box;
+            display: inline-flex;
+            font-size: inherit;
+            font-style: normal;
+            font-weight: 500;
+            max-width: 100%;
+            text-align: center;
+            text-decoration: none;
+            white-space: nowrap;
+            background: rgb(0, 82, 204);
+            border-radius: 3px;
+            box-shadow: transparent 0px 0px 0px 2px;
+            color: rgb(255, 255, 255);
+            cursor: default;
+            height: 2.28571em;
+            line-height: 2.28571em;
+            padding: 0px 8px;
+            transition: background 0.1s ease-out 0s, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38) 0s;
+            vertical-align: middle;
+            width: auto;
         }
 
     }
@@ -220,7 +220,7 @@ body {
         position: relative;
         left: 0;
         &:active {
-            transform: scale(1);
+            // transform: scale(1);
 
         }
         &::after {
@@ -296,24 +296,39 @@ body {
         margin-left: auto;
         margin-right: auto;
         .list-projects {
-            display: none;
-            min-height: 300px;
+            // min-height: 300px;
+            display: block;
+            position: relative;
+            left: 0px;
+            max-width: 175px;
+            width: 100%;
             height: auto;
+            box-shadow: 0 4px 8px -2px rgba(9,30,66,.25), 0 0 1px rgba(9,30,66,.31);
+            border-radius: 0.3rem;
+            transition: display 0.2s ease-out 0s;
             ul {
+                padding-left: 10px;
                 font-weight: 500;
+                list-style: none;
+                li {
+                    font-weight: 400;
+                    cursor: pointer;
+                }
             }
 
         }
-        &.displayed {
-            display: block;
+
+        .no-display {
+            display: none;
         }
+
     }
 
     .modal-footer {
         background-color: #fff;
         border: none;
         padding: 16px 32px;
-        width: 800px;
+        width: 768px;
         margin-left: auto;
         margin-right: auto
     }
@@ -322,8 +337,26 @@ body {
         left: -1000%;
         position: absolute;
     }
+    .project {
+        margin-bottom: 50px;
+    }
 
-    input[type-text] {
+    #project-type {
+        position: relative;
+        top: 25px;
+        left: -60px;
+    }
+    #issue-type {
+        position: relative;
+        top: 25px;
+        left: -48px;
+    }
+
+    #summary, #description {
+        width: 100%;
+        position: relative;
+        top: 25px;
+        left: 0px;
         height: 32px;
         font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,'Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
         color: #172b4d;
@@ -334,6 +367,37 @@ body {
         background-color: #f4f5f7;
         border: 1px solid #dfe1e6;
         padding: 4px 7px 5px;
+    }
+
+    input {
+        height: 32px;
+        font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,'Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
+        color: #172b4d;
+        font-size: 14px;
+        font-weight: 400;
+        font-style: normal;
+        line-height: 20px;
+        background-color: #f4f5f7;
+        border: 1px solid #dfe1e6;
+        padding: 4px 7px 5px;
+    }
+    input:-ms-input-placeholder {
+        font-weight: bold;
+        color: black;
+    }
+    .btn-project-displayer {
+        position: relative;
+        top: 25px;
+        left: -11%;
+    }
+    .btn-issue-displayer {
+        position: relative;
+        top: 25px;
+        left: -9%;
+    }
+
+    .issue, .summary, .description {
+        margin-bottom: 50px;
     }
 }
 
